Generate excel reports and bugs corrections

--- a/.env copy
+++ b/.env copy
@@ -1,6 +1,12 @@
-PORT=3000
+PORT="THE PORT THE APP WILL RUN "
 
-DB_NAME=""
-DB_USER=""
-DB_PASS=""
-DB_HOST=""
+DB_NAME="YOUR DB NAME"
+DB_USER="YOUR DB USER"
+DB_PASS="YOUR DB PASSWORD"
+DB_HOST="YOUR DB HOST"
+
+REPORT_TEMPLATE="report_template.xlsx"
+
+EMAIL_SERVICE ="gmail"
+EMAIL_FROM="YOUR EMAIL TO SEND THE REPORTS"
+EMAIL_PASS="YOUR GENERATED PASSWORD APP"
