--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "moment": "^2.30.1",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "sequelize": "^6.35.1",
     "uuid": "^9.0.1"
